src/test/ui/keyword/keyword-self-as-identifier.stderr
error[E0531]: cannot find unit struct/variant or constant `Self` in this scope
  --> $DIR/keyword-self-as-identifier.rs:2:9
   |
LL |     let Self = 22;
   |         ^^^^ not found in this scope

error: aborting due to previous error

